@@ -5,6 +5,7 @@ Version 3.9.11
   to force case sensitivity in other languages
 - Added a new preprocessor (mcpp) for C
 - Report an error if ORGH tries to go backwards
+- Added support for more kinds of operands in inline assembly
 
 Version 3.9.10
 - Added a peephole optimizer to replace "mov x, #0 ; add x, y" with
